updating our details

--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
         <h1 class='masthead-heading'>Sofia Rojas</h1>
     </header>
     <section class="details">
-      <h1>Introduction</h1>
-      <p>Details here...</p>
-      <h1>Where I'm From</h1>
-      <p>Details here...</p>
-      <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
-      <h1>What's your dream job?</h1>
-      <p>Details here...</p>
-      <h1>Where do you live?</h1>
-      <p>Details here...</p>
-      <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <h1>It´s kind of fun to do the impossible</h1>
+      <p>Currently working as public relations specialist</p>
+      <h1>Born and raised in Mexico City</h1>
+      <p>I wanted to navigate in new directions towards the tech world </p>
+      <h1>Love to spend time with my two cats</h1>
+      <p>Trying to change the world by volunteering with a NGO</p>
+      <h1>Dreaming to be a web developer</h1>
+      <p>and working hard to make it possible</p>
+      <h1>Currently living in Mexico City</h1>
+      <p>enjoying the chill weather</p>
+      <h1>I want to be a web developer</h1>
+      <p>because I found is one of my favorite things to do</p>
     </section>
 
     <footer id="footer">
